Fix #7606 "ld: framework not found CoreImage" Bug
This affects OpenCV 2.4 on older Macs with Xcode versions
before 7.0 (i.e., Mac OS X versions older than 10.11 El Capitan)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,7 @@ endif()
 # ===================================================
 OCV_OPTION(WITH_1394           "Include IEEE1394 support"                    ON   IF (NOT ANDROID AND NOT IOS) )
 OCV_OPTION(WITH_AVFOUNDATION   "Use AVFoundation for Video I/O (iOS/Mac)"    ON   IF APPLE)
+OCV_OPTION(WITH_COREIMAGE      "Link Directly Against CoreImage Framework"   ON   IF (CMAKE_GENERATOR MATCHES Xcode AND XCODE_VERSION VERSION_GREATER 7.0) )
 OCV_OPTION(WITH_CARBON         "Use Carbon for UI instead of Cocoa"          OFF  IF APPLE )
 OCV_OPTION(WITH_CUDA           "Include NVidia Cuda Runtime support"         ON   IF (CMAKE_VERSION VERSION_GREATER "2.8" AND NOT IOS) )
 OCV_OPTION(WITH_VTK            "Include VTK library support (and build opencv_viz module eiher)"             OFF IF (NOT ANDROID AND NOT IOS AND NOT CMAKE_CROSSCOMPILING) )
@@ -923,6 +924,9 @@ endif(DEFINED WITH_GIGEAPI)
 
 if(DEFINED APPLE)
   status("    AVFoundation:"   HAVE_AVFOUNDATION   THEN YES                                        ELSE NO)
+  if(WITH_COREIMAGE OR HAVE_COREIMAGE)
+  status("    CoreImage:"      HAVE_COREIMAGE      THEN "YES (deprecated)"                         ELSE NO)
+  endif()
   if(WITH_QUICKTIME OR HAVE_QUICKTIME)
   status("    QuickTime:"      HAVE_QUICKTIME      THEN YES                                        ELSE NO)
   endif()
