--- a/modules/highgui/CMakeLists.txt
+++ b/modules/highgui/CMakeLists.txt
@@ -220,7 +220,10 @@ if(HAVE_AVFOUNDATION)
     list(APPEND HIGHGUI_LIBRARIES "-framework AVFoundation" "-framework QuartzCore")
   else()
     list(APPEND highgui_srcs ${CMAKE_CURRENT_LIST_DIR}/src/cap_avfoundation_mac.mm)
-    list(APPEND HIGHGUI_LIBRARIES "-framework Cocoa" "-framework Accelerate" "-framework AVFoundation" "-framework CoreGraphics" "-framework CoreImage" "-framework CoreMedia" "-framework CoreVideo" "-framework QuartzCore")
+    list(APPEND HIGHGUI_LIBRARIES "-framework Cocoa" "-framework Accelerate" "-framework AVFoundation" "-framework CoreGraphics" "-framework CoreMedia" "-framework CoreVideo" "-framework QuartzCore")
+    if(HAVE_COREIMAGE)
+      list(APPEND HIGHGUI_LIBRARIES "-framework CoreImage")
+    endif()
   endif()
 endif()
 
